kubernetes/cluster/default/lighttpd/lighttpd.yaml
# Service: Lighttpd
# Ingress: casa.brhd.io
# Label: app.kubernetes.io/name: lighttpd
---
apiVersion: v1
kind: Service
metadata:
  name: lighttpd
  namespace: default
  labels:
    app.kubernetes.io/name: lighttpd
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: lighttpd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lighttpd
  labels:
    app.kubernetes.io/name: lighttpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lighttpd
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lighttpd
    spec:
      restartPolicy: Always
      containers:
        - name: lighttpd
          image: sebp/lighttpd:1.4.64-r0
          tty: true
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: lighttpd-www
              mountPath: /var/www/localhost/htdocs
      volumes:
        - name: lighttpd-www
          persistentVolumeClaim:
            claimName: lighttpd-www
