kubernetes/cluster/default/lighttpd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lighttpd
  namespace: default
  labels:
    app.kubernetes.io/name: lighttpd
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: casa.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: lighttpd
                port:
                  number: 80
  tls:
    - hosts:
        - casa.brhd.io
